--- a/Projet-Numérique-3-TS.ipynb
+++ b/Projet-Numérique-3-TS.ipynb
@@ -341,7 +341,6 @@
     "n = len(observation_indexes)\n",
     "E_M = depth.mean()*np.ones(n) # moyenne empirique des observations\n",
     "E_Y = mu * np.ones(N-n) + np.dot(np.matrix.transpose(Sigma_M_Z), np.dot(np.linalg.inv(Sigma_M), depth - E_M)) \n",
-    "        # on peut remplacer mu par E_M ?\n",
     "\n",
     "# On implémente une fonction auxiliaire dont le but est de \"combiner\" les matrices des observations (M) \n",
     "# et celles des valeurs simulées (Simul)\n",
@@ -667,6 +666,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'L_sim' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-bbcb8c18a3dd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#3ème méthode: on part de la médiane et on prend 95% des valeurs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mL_sim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mNb_sim\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mL_sim\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mNb_sim\u001b[0m\u001b[1;33m//\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mI\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mL_sim\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'L_sim' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#3ème méthode: on part de la médiane et on prend 95% des valeurs\n",
+    "L_sim.sort()\n",
+    "Nb_sim=len(L_sim)\n",
+    "k=Nb_sim//2\n",
+    "I=[L_sim[k]]\n",
+    "compteur=1\n",
+    "while len(I)/Nb_sim<0.95:\n",
+    "    I=L_sim[k-compteur]+I+L_sim[k+compteur]\n",
+    "print(\"Intervalle de confiance [\",I[0],I[len(I)-1],\"]\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -912,7 +940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
